--- a/jellyfin1.css
+++ b/jellyfin1.css
@@ -1,4 +1,4 @@
-/*Alternate itempage*/
+/*Alternate itempage
 .itemBackdrop {
   height: 31vh !important;
   display: inherit;
@@ -16,62 +16,8 @@
 .itemBackdrop::after {
   background: rgba(0,0,0,.26) !important;
 }
-#homeTab
-  > div
-  > div.section2
-  > div:nth-child(2)
-  > div.sectionTitleContainer.sectionTitleContainer-cards.padded-left
-  > a
-  > h2 {
-  display: none;
-}
-#homeTab
-  > div
-  > div.section2
-  > div:nth-child(2)
-  > div.sectionTitleContainer.sectionTitleContainer-cards.padded-left
-  > a
-  > span {
-  display: none;
-}
-#homeTab
-  > div
-  > div.section2
-  > div:nth-child(2)
-  > div.sectionTitleContainer.sectionTitleContainer-cards.padded-left
-  > a:after {
-  content: 'Recently Added TV Shows ›';
-  font-size: 24px;
-  font-weight: normal;
-}
-#homeTab
-  > div
-  > div.section2
-  > div:nth-child(1)
-  > div.sectionTitleContainer.sectionTitleContainer-cards.padded-left
-  > a
-  > h2 {
-  display: none;
-}
-#homeTab
-  > div
-  > div.section2
-  > div:nth-child(1)
-  > div.sectionTitleContainer.sectionTitleContainer-cards.padded-left
-  > a
-  > span {
-  display: none;
-}
-#homeTab
-  > div
-  > div.section2
-  > div:nth-child(1)
-  > div.sectionTitleContainer.sectionTitleContainer-cards.padded-left
-  > a:after {
-  content: 'Recently Added Movies ›';
-  font-size: 24px;
-  font-weight: normal;
-}
+*/
+
 div.starRatingContainer {
   display: none;
 }
